<resources>
    <string name="app_name">TestCreator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Test creator</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_statistic">Результаты</string>
    <string name="menu_add_test">Добавить тест</string>
    <string name="menu_search_test">Искать тест</string>
    <string name="menu_pick_theme">Выбрать тему теста</string>
    <string name="menu_compare">Результаты всех</string>
    <string name="menu_info">О разработчике</string>
    <string name="emailHint">Email</string>
    <string name="pswdHint">Пароль</string>
    <string name="signUp">Зарегистрироваться</string>
    <string name="haveAccount">Уже есть аккаунт? Войдите через него</string>
    <string name="notHaveAccount">Нет аккаунта? Зарегистрироваться</string>
    <string name="signIn">Войти</string>
    <string name="menu_logout">Выход</string>
    <string name="nameTest">Название теста</string>
    <string name="continueCreating">Продолжить создание</string>
    <string name="inputNewCategory">Новая тема</string>
    <string name="questionText">Формулировка вопроса</string>
    <string name="selectTypeAnswer">Выберите тип ответа на вопрос</string>
    <string name="typeOneAnswer">Один правильный ответ</string>
    <string name="typeManyAnswer">Несколько правильных ответов</string>
    <string name="typeOwnAnswer">Ответ в свободной форме</string>
    <string name="answersNumber">Количество вариантов ответов (не более 10)</string>
    <string name="questionPoint">Баллов за вопрос (от 1 до 10)</string>
    <string name="questionNumber">Вопрос 1</string>
    <string name="startCreatingAnswers">Перейти к созданию ответов</string>
    <string name="exampleAnswersNumber">4</string>
    <string name="addNewVariant">Добавить вариант ответа</string>
    <string name="createNextQuestion">Перейти к созданию следующего вопроса</string>
    <string name="endCreatingTest">Завершить создание теста</string>
    <string name="answerText">Текст ответа</string>
    <string name="chooseImage">Выбрать картинку</string>
    <string name="wallpaperTest">Выберите картинку на логотип составляемого теста</string>
    <string name="wrongAnswers">Неправильные ответы</string>
    <string name="menuSettings">Настройки</string>
    <string name="finishTest">Завершить тест</string>
    <string name="viewAnswers">Посмотреть ответы</string>
    <string name="doQuizAgain">Пройти тест снова</string>
    <string name="time">Время</string>
    <string name="point">Баллов</string>
    <string name="result">Вопросов</string>
    <string name="exampleResult">12/25</string>
    <string name="theme">Тема: </string>
    <string name="onlineMode">Онлайн-режим</string>
    <string name="shuffleMode">Перемешать вопросы</string>
    <string name="shuffleAnswerMode">Перемешать ответы</string>
    <string name="clickToPick">Нажмите, чтобы выбрать картинку </string>
    <string name="catPicture">Картинка с котиком</string>
    <string name="answerA">Ответ A</string>
    <string name="answerB">Ответ B</string>
    <string name="answerC">Ответ C</string>
    <string name="answerD">Ответ D</string>
    <string name="answerE">Ответ E</string>
    <string name="answerF">Ответ F</string>
    <string name="answerG">Ответ G</string>
    <string name="answerH">Ответ H</string>
    <string name="answerI">Ответ I</string>
    <string name="answerJ">Ответ J</string>
</resources>
