<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_new_test"
            android:icon="@drawable/ic_menu_name_test"
            android:title="@string/menu_add_test" />
        <item
            android:id="@+id/nav_statistic"
            android:icon="@drawable/ic_insert_chart_black_24dp"
            android:title="@string/menu_statistic" />
        <item
            android:id="@+id/nav_selecting_test"
            android:icon="@drawable/ic_menu_search_test"
            android:title="@string/menu_search_test" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_menu_search_test"
            android:title="@string/menu_pick_theme" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_compare"
                android:icon="@drawable/ic_people_outline_black_24dp"
                android:title="@string/menu_compare" />
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_info_outline_black_24dp"
                android:title="@string/menu_info" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_logout"
                android:title="@string/menu_logout" />
        </menu>
    </item>
</menu>
