<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_statistic">

    <fragment
        android:id="@+id/nav_statistic"
        android:name="com.example.testcreator.ui.statistic.StatisticFragment"
        android:label="@string/menu_statistic"
        tools:layout="@layout/fragment_statistic" />

    <fragment
        android:id="@+id/nav_new_test"
        android:name="com.example.testcreator.ui.newTest.NewTestFragment"
        android:label="@string/menu_add_test"
        tools:layout="@layout/fragment_name_test" />

    <fragment
        android:id="@+id/nav_selecting_test"
        android:name="com.example.testcreator.ui.searchTest.SelectingTestFragment"
        android:label="@string/menu_search_test"
        tools:layout="@layout/fragment_selecting_test" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.example.testcreator.ui.category.CategoryFragment"
        android:label="@string/menu_pick_theme"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/nav_compare"
        android:name="com.example.testcreator.ui.compare.CompareFragment"
        android:label="@string/menu_compare"
        tools:layout="@layout/fragment_compare" />

    <fragment
        android:id="@+id/nav_info"
        android:name="com.example.testcreator.ui.info.InfoFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.testcreator.ui.logout.LogoutFragment" />
</navigation>